# lutagu-mvp

./: --path  .dockerignore  .env.example  .env.local.rtf  .eslintrc.json  .gcloudignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  01_TAGGING_SYSTEM.md  07_DEMO_GUIDE.md  ARCHITECTURE.md  CLAUDE.md  COMMIT_MESSAGE.md  CRITICAL_FIX_REPORT.md  DAILY_NEWS_FEED_PLAN.md  DASHBOARD_OPTIMIZATION_GUIDE.md  DEVELOPMENT_GUIDE.md  EVALUATION_SUMMARY.md  FINAL_FIX_REPORT.md  FINAL_PERFORMANCE_SUMMARY.md  FIX_COMPLETION_REPORT.md  FIX_SUMMARY.md  FIX_VERIFICATION_REPORT.md  FRONTEND_FIXES_PLAN.md  FRONTEND_OPTIMIZATION_SUMMARY.md  FRONTEND_PERFORMANCE_OPTIMIZATION_REPORT.md  FRONTEND_QUICK_FIX_GUIDE.md  INTEGRITY_REPORT.md  KNOWLEDGE_BASE.md  LABEL_FIX_SUMMARY.md  LAYERED_DISPLAY_EVALUATION_REPORT.md  LUTAGU_Product_Overview.md  LUTAGU_Product_Overview_tech_patch.md  LUTAGU_Product_Overview_v2.3.md  MAPCONTAINER_OPTIMIZATION_PLAN.md  MIGRATION_REPORT.md  OPTIMIZATION_DOCS_INDEX.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  (+108 more)
.agent/: INDEX.md  INSTALLATION_REPORT.md  QUICK_START.md  README.md
.claude/: settings.json
.github/: copilot-instructions.md
bambigo-v2.1/: README.md
bambigo-v3.0/: 01_TAGGING_SYSTEM.md  BambiGO_L2_Data_Sync.json  BambiGO_L2_Data_Sync_V5.json
dify/: bambigo_tools_v2.json  dify-tools-v3.yaml  lutagu_agent_prompt.md  lutagu_station_knowledge.csv  openapi_tools_v2.yaml  openapi_tools_v3.yaml  openapi_tools_v4.yaml  openapi_tools_v5.yaml
dify_import/: bambigo_agent.yml  station_wisdom_rag.txt  station_wisdom_rag_l4.txt
doc/: DEVELOPMENT_TASKS_2026.md  GAP_ANALYSIS_2026.md
docs/: ADMIN_USAGE_GUIDE.md  AGENT_FRAMEWORK_EVALUATION.md  AGENT_REASONING_CHAIN_DESIGN.md  BACKLOG-ai-chat-debug.md  BRAIN_OPERATIONAL_REPORT.md  DATA_ARCHITECTURE_SPEC.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_LOG_20260103.md  DEVELOPMENT_LOG_20260104.md  DEVELOPMENT_OPTIMIZATION_PLAN.md  L3_Automation_Design.md  L4_AI_ASSISTANT_REPORT.md  LUTAGU_AI_ARCHITECTURE.md  N8N_ENV_SETUP_GUIDE.md  NODE_ADMIN_PHASE3_README.md  ODPT_CHALLENGE_2025_SUBMISSION.md  OPEN_DATA_SOURCES.md  P0_OPTIMIZATION_TEST_REPORT.md  PERFORMANCE_REPORT.md  PHASE3_PHASE4_SUMMARY.md  PHASE4_FRONTEND_INTEGRATION.md  PLAN-adk-agent-migration.md  PLAN-ai-agent-2.md  PLAN-commercial-geo.md  PLAN-maas-production.md  PLAN-phase-13-line-login.md  PLAN-phase1-optimization.md  PLAN-phase1-testing.md  PLAN-phase11-optimization.md  PLAN-phase2-optimization.md  PLAN-phase3-optimization.md  PLAN-pwa-offline.md  TEST_REPORT.md  WALKTHROUGH-phase14.md  WALKTHROUGH-phase2.md  WALKTHROUGH-phase3.md  bambigo-l2-workflow-setup-guide.md  decision-manifest.md  dify_knowledge_barrier_free.md  (+16 more)
plans/: dify  t  (+35 more)
scripts/rust/: Cargo.toml
services/etl-pipeline-rs/: .gcloudignore  .gitignore  CHECKLIST.md  Cargo.toml  Dockerfile  README.md  deploy.sh  verify.sh  verify_data.js
services/etl-pipeline-rs/src/: main.rs
services/etl-pipeline-rs/src/db/: supabase.rs
services/etl-pipeline-rs/src/modules/: l3_osm.rs  l3_toilets.rs  mod.rs  odpt_client.rs
services/etl-pipeline-rs/src/utils/: http.rs  mod.rs  rate_limit.rs
services/l2-status-rs/: Cargo.toml  Dockerfile  deploy.sh
services/l2-status-rs/src/: main.rs
services/shared/odpt-client-rs/: Cargo.toml
services/shared/odpt-client-rs/src/: cache.rs  client.rs  error.rs  lib.rs  models.rs
services/shared/odpt-client-rs/tests/: integration.rs
services/vector-search-rs/: Cargo.toml  Dockerfile  build.rs  build_errors.txt  docker-compose.yml
services/vector-search-rs/proto/: vector_search.proto
services/vector-search-rs/src/: embedding.rs  http.rs  main.rs  search.rs
(+2873 files in other folders)
