[package]
name = "lutagu-scripts"
version = "0.1.0"
edition = "2021"
description = "Rust CLI tools replacing Python scripts for LUTAGU MVP"

[[bin]]
name = "export_dify_wisdom"
path = "src/bin/export_dify_wisdom.rs"

[[bin]]
name = "debug_lcp"
path = "src/bin/debug_lcp.rs"

[[bin]]
name = "parse_lighthouse"
path = "src/bin/parse_lighthouse.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
