[package]
name = "etl-pipeline-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lutagu-etl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
governor = "0.6"
futures = "0.3"
rayon = "1.10"
chrono = "0.4"
urlencoding = "2.1"
regex = "1.10"
home = "=0.5.9"
base64ct = "=1.6.0"
odpt-client = { path = "../shared/odpt-client-rs", features = ["redis-cache"] }

[dev-dependencies]
tokio-test = "0.4"
