[package]
name = "l2-status-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
regex = "1.10"
