[package]
name = "vector-search-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"

# Async Runtime
tokio = { version = "1.38", features = ["full"] }

# Qdrant Client
qdrant-client = "1.10"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"
